[package]
name = "guifirst"
version = "0.1.0"
authors = ["juhyung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.25", default-features = true }
image = "0.22"
imgui = { version = "0.3.0-pre", path = "./imgui-rs" }
imgui-glium-renderer = { version = "0.3.0-pre", path = "./imgui-rs/imgui-glium-renderer" }
imgui-winit-support = { version = "0.3.0-pre", path = "./imgui-rs/imgui-winit-support" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", tag = "v0.3.1" }
kvdb-rocksdb = { path = "../kodebox/codechain/util/kvdb-rocksdb" }